[gd_scene load_steps=4 format=3 uid="uid://ddk8hn0jx3lpg"]

[ext_resource type="Script" path="res://scripts/win_screen.gd" id="1_m5l4d"]
[ext_resource type="PackedScene" uid="uid://8w8wqgsf5vbs" path="res://parallax_background.tscn" id="2_g0l7j"]
[ext_resource type="FontFile" uid="uid://chlo1df4t6fcd" path="res://assets/ui/fonts/rainyhearts.ttf" id="3_u15fd"]

[node name="WinScreen" type="Node2D"]
script = ExtResource("1_m5l4d")

[node name="ParallaxBackground" parent="." instance=ExtResource("2_g0l7j")]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Control"]
offset_left = -156.0
offset_top = 51.5
offset_right = 156.0
offset_bottom = 116.5

[node name="Next" type="Button" parent="Control/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_u15fd")
theme_override_font_sizes/font_size = 32
text = "Next Level
"

[node name="Quit" type="Button" parent="Control/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_u15fd")
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -49.5
offset_right = 156.0
offset_bottom = 49.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="QuailScore" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_u15fd")
theme_override_font_sizes/font_size = 32
text = "you rescued blank quails"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[connection signal="button_down" from="Control/VBoxContainer2/Next" to="." method="_on_next_button_down"]
[connection signal="button_down" from="Control/VBoxContainer2/Quit" to="." method="_on_quit_button_down"]
